# givinggrid-widget

./: CMakeLists.txt  README.md  givinggrid-widget-plugin.php  header.php.in  plugin.php
js/: givinggrid.js
